--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha spec --reporter spec --require ./spec/helpers/chai.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/landrysoules/bus-stop-service.git"
+  },
   "author": "Landry Soules",
   "license": "GPL-2.0",
   "bugs": {
@@ -14,7 +18,11 @@
   "homepage": "https://github.com/landrysoules/bus-stop-service#readme",
   "dependencies": {
     "bunyan": "^1.5.1",
+    "dotenv-safe": "^2.2.0",
     "express": "^4.13.4",
+    "express-errorhandler": "^1.6.0",
+    "mongodb": "^2.1.7",
+    "mongojs": "^2.3.0",
     "needle": "^0.11.0"
   },
   "devDependencies": {
