--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
+    "chai-json-equal": "0.0.1",
+    "chai-shallow-deep-equal": "^1.4.0",
     "mocha": "^2.4.5",
     "really-need": "^1.9.0",
     "rewire": "^2.5.1",
