--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv-safe": "^2.2.0",
     "express": "^4.13.4",
     "express-errorhandler": "^1.6.0",
+    "lodash": "^4.6.1",
     "mongodb": "^2.1.7",
     "mongojs": "^2.3.0",
     "needle": "^0.11.0",
